# api-private/swagger.json
@@ -82,7 +82,7 @@
           "200": {
             "description": "ok",
             "schema": {
-              "$ref": "#/definitions/OauthJumpResponse"
+              "$ref": "#/definitions/oauthJumpResponse"
             }
           }
         }
@@ -104,8 +104,7 @@
           "200": {
             "description": "ok",
             "schema": {
-              "type": "string",
-              "description": "token"
+              "$ref": "#/definitions/token"
             }
           }
         }
@@ -138,16 +137,25 @@
     }
   },
   "definitions": {
-    "OauthJumpResponse": {
+    "oauthJumpResponse": {
       "type": "object",
       "properties": {
         "token": {
+          "type": "object",
+          "$ref": "#/definitions/token"
+        },
+        "queryString": {
+          "type": "string"
+        }
+      }
+    },
+    "token": {
+      "type": "object",
+      "properties": {
+        "accessToken": {
           "type": "string"
         },
         "refreshToken": {
-          "type": "string"
-        },
-        "queryString": {
           "type": "string"
         }
       }
